# gold-digger

./: .gitignore  LICENSE  README.md  SKILL.md  gemini-extension.json  pyproject.toml
.agents/: gold-digger.md
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.hermes-plugin/: plugin.json
.openclaw-plugin/: plugin.json
agents/: gold-digger-researcher.md
assets/diagrams/: 01-compounding.html  02-architecture.html  03-lifecycle.html  04-kol-flow.html  05-value-compounding.html  index.html
references/: api-keys.md  extending.md  ignore.md  narratives.md  schema.md
scripts/: gold_digger.py
scripts/lib/: aggregate.py  dashboard.py  entity.py  export.py  first_mention.py  ignore.py  keys.py  kols.py  narratives.py  render.py  schema.py  snapshots.py  storage.py
scripts/sources/: _base.py  coingecko.py  defillama.py  github.py  last30days.py  news.py  perplexity.py  xai.py
seed/kols/: degensensei.md  resdegen.md
seed/projects/: openserv.md  reppo.md
