[project]
name = "gold-digger"
version = "0.1.0"
description = "Research early crypto-AI projects with daily compounding reports"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "skyzer" }]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "python-frontmatter>=1.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
gold-digger = "gold_digger:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
